--- a/mary.css
+++ b/mary.css
@@ -7,6 +7,13 @@ body
     background-attachment: fixed;
 }
 
+h1{
+     position: relative;
+	 width: 300px;
+	 margin: 20px auto 0 auto;
+	
+}
+
 .card {
 	 position: relative;
 	 width: 300px;
